examples/test/testpolicy7981.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7981
  namespace: namespace400
spec:
  podSelector:
    matchLabels:
      key40: value44
      key32: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value49
          key47: value35
          key36: value16
      podSelector:
        matchLabels:
          key34: value39
